--- a/sapui5routing/webapp/i18n/i18n.properties
+++ b/sapui5routing/webapp/i18n/i18n.properties
@@ -6,8 +6,10 @@ appDescription=App Description
 appTitle=Navigation & Routing Tutorial
 appDescription=A simple app that explains how to use navigation and routing features of SAPUI5
 
+iWantToNavigateHome=I want to navigate away from Home Page
 iWantToNavigate=I want to navigate
 homePageTitle=Home
 NotFound=Not Found
 NotFound.text=Sorry, but the requested resource is not available.
 NotFound.description=Please check the URL and try again.
+DisplayNotFound=Display Not Found
